--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/humble/acado_vendor
-	previous = 
-	base = f9c3f18
+	previous = f9c3f18
+	base = a69d9b0
 	trim = 
 	trimbase = 
